Show error when trying to define an endpoint operation using a method that the spec doesn't use.